# dask-clickhouse

./: .gitignore  README.md  pyproject.toml
dask_clickhouse/: __init__.py  core.py
tests/: test_dask_clickhouse.py
